--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,86 @@
     box-sizing: border-box;
 }
 .container{
-    max-width: 1000px;
+    max-width: 1100px;
 }
+.brand-container{
+  width: 1080px !important;
+}
+.brand-create-button{
+  position: relative;
+  left: 17%;
+}
+.brand-create-button button:hover{
+  background-color: skyblue;
+}
+.brand-name-info{
+  position: relative;
+  right: 17%;
+}
+.brand-name-info i{
+  font-size: 2.5rem;
+}
+.brand-name-info h1{
+  font-size: 2rem;
+  font-weight: bold;
+}
+.brand-create-button button{  
+  float: right;
+  padding: 10px 50px;
+  background-color: #3aa8f7;
+  color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+} 
+.brandSection{
+  border-radius: 5px;
+  /* overflow-y: auto; */
+  border: 1px solid #dedede;
+  margin: auto;
+  max-width: 1050px;
+  padding: 19px 30px;
+}
+.brand-arrow{
+  margin-left: 9rem;
+  display: flex !important;
+
+}
+.brand-arrow button{
+  font-size: 1.2rem;
+}
+.brand-name-logo{
+   position: relative;
+   right: 14%;
+}
+.brand-name-logo i{
+  font-size: 1.4rem;
+  
+}
+.brand-name-logo h1{
+  margin-left: 0.9rem;
+  font-weight: 600;
+  font-size: 1.2rem;
+}
+.trash-button {
+  margin-left: 1rem;
+  color: #f44336;
+}
+.trash-button:hover{
+  color: #f44336;
+  cursor: pointer;
+}
+.arrow-button{
+  color: #3aa8f7;
+}
+.arrow-button:hover{
+  color: black;
+}
+
+
+
+
+
+
 
 .brands-name{
    display: inline-flex;
@@ -38,6 +116,7 @@
 .arrow-icon{
     margin-top: 0.2rem;
 }
+
 .brand-link a{
     text-decoration: none;
     color: #fff;
@@ -47,17 +126,12 @@
     text-align: center;
 }
 .main-brand-container{
-    /* margin-top: 7rem; */
-    /* background-color: antiquewhite; */
+  /* max-width: 1200px; */
     height:100%;
+    overflow-x: hidden;
     overflow-y: auto;
 }
-.brand-top-section{
-    display: grid;
-    grid-template-columns: repeat( 1fr,0.2fr);
-    padding: 30px 50px;
-    /* width: 1080px; */
-}
+
 .buttons{
     text-align: end;
     margin-left: 19rem;
@@ -82,10 +156,12 @@
     background-color: #3aa8f7;
     color: #fff;
     border-radius: 5px;
+    cursor: pointer;
 }
 .create-button:hover{
     color: #fff;
     background-color: skyblue;
+    cursor: pointer;
 }
 .back-button:hover{
     color: #fff;
@@ -270,6 +346,7 @@
   .rep-create-button button:hover{
       color: #fff;
       background-color: skyblue;
+      cursor: pointer;
   }
      
     .rep-name{
@@ -433,4 +510,52 @@
          }
          .ModalBody{
           border: hidden;
+         }
+         .upload-button{
+          position: absolute;
+          /* top: 0%; */
+         }
+
+         /* Users Section */
+         .main-users-container{
+          width: 1089px;
+          height: 100%;
+          overflow-y: auto;
+          background-color: #f1f1f1;      
+         }
+         .top-section{
+          display: grid;
+          grid-template-columns: repeat(12, 1fr);
+          width: 100%;
+          gap: 10px;
+          align-items: center;
+          padding: 14px 50px;
+          margin-top: 1.5rem;
+          /* padding-inline: 20px; */
+         }
+         .users-name{
+          display: flex;
+          grid-column: span 6;
+          font-size: 2rem;
+         }
+         .users-name h1{
+          margin-left: 0.8rem;
+          font-weight: 600;
+         }
+         .users-create-button button{
+          grid-column: span 6;
+          background-color: #3aa8f7;
+          color: #fff;
+          border-radius: 5px;
+          padding: 10px 50px;
+            margin-left: 49rem;     
+         }
+         .users-create-button button:hover{
+          color: #fff;
+          background-color: skyblue;
+          cursor: pointer;
+         }
+          
+         .ModalFooter{
+          border: none;
          }
