--- a/src/App.css
+++ b/src/App.css
@@ -78,9 +78,50 @@
 .arrow-button:hover{
   color: black;
 }
-
-
-
+/* ==============Defective Heading cSS===================== */
+.defectHead{
+/* background-color: #f44336; */
+font-size: 2.1rem;
+font-weight: 600;
+line-height: 2rem;
+margin-top: 20px;
+margin-bottom: 20px;
+}
+.DropSelect{
+  font-size: 1.125rem;
+    font-weight: 500;
+    line-height: 1.5rem;
+    text-transform: capitalize;
+}
+.StepsCss{
+  /* background-color: #3aa8f7; */
+  /* font-size: 2.5rem; */
+  
+}
+/* ========================Stepper========================= */
+.step-item {
+  @apply relative flex flex-col justify-center items-center w-36;
+}
+.step-item:not(:first-child):before {
+  @apply content-[''] bg-slate-200 absolute w-full h-[3px] right-2/4 top-1/3 -translate-y-2/4;
+}
+.step {
+  @apply w-10 h-10 flex items-center justify-center z-10 relative bg-slate-700 rounded-full font-semibold text-white;
+}
+.active .step {
+  @apply bg-sky-600;
+}
+.complete .step {
+  @apply bg-green-600;
+}
+.complete p {
+  @apply text-white;
+}
+.complete:not(:first-child):before,
+.active:not(:first-child):before {
+  @apply bg-green-600;
+}
+/* ==============Defective Heading cSS===================== */
 
 
 
