Users pages update
Users ke routes set kiy r new pages create kiy using repair device

--- a/src/App.css
+++ b/src/App.css
@@ -98,6 +98,9 @@ margin-bottom: 20px;
   /* font-size: 2.5rem; */
   
 }
+.Purchase:hover{
+color: black
+}
 /* ========================Stepper========================= */
 .step-item {
   @apply relative flex flex-col justify-center items-center w-36;
