--- a/src/App.css
+++ b/src/App.css
@@ -437,7 +437,7 @@ color: black
         width: 140px;
         height: 40px;
         position: relative;
-        left: 84%;
+        left: 120%;
         bottom: 3.7rem;
         font-size: 16px;
         font-weight: 600;
@@ -539,7 +539,7 @@ color: black
             font-weight: 600;
          }
          .brand-info-content p{
-            font-size: 0.7rem;
+            font-size: 0.6rem;
          }
          .cross-button{
           position: absolute;
@@ -647,3 +647,135 @@ color: black
           margin-left: 4.3rem;
           margin-top: 0.3rem;
         }
+       .users-container{
+        width: 1080px;
+        height: 100%;
+        overflow: hidden;
+        background-color: #f1f1f1;
+       }
+       .user-role-icon{
+        font-size: 2.8rem;
+       }
+       .user-role-section h1{
+        font-size: 2.3rem;
+        text-align: center;
+        font-weight: 500;
+       }
+       .user-role-section button{
+        background-color: #3aa8f7;
+        border: none;
+        padding: 10px 50px;
+       }
+      .user-role-section button:hover{
+        background-color: skyblue;
+      }
+      .search-box{
+        width: 70%;
+        /* margin-top: 1.6rem; */
+      }
+      .search-box input{
+        padding: 12px 24px;
+        /* margin-left: 2.2rem; */
+      } 
+      .sort_icon{
+        position: absolute;
+        right: 9%;
+        top: 32%;
+        color: #fff;
+        font-size: 1.3rem;
+      }
+      .main_content{
+        border: 1px solid lightgray;
+        background-color: #fff;
+        /* border-top-left-radius: 5px;
+        border-top-right-radius: 5px; */
+        border-radius: 5px;
+         margin-left: 20px;
+         margin-right: 20px;
+      }
+      .main_content h4{
+        color: green;
+      }
+      .users_arrow{
+        color: #3aa8f7;
+        font-size: 1.2rem;
+      }
+      .users_trash{
+        color: red;
+        font-size: 1.2rem;
+      }
+      .roles{
+         font-size: 0.9rem;
+         padding-left: 1rem;
+      }
+      .showing-users{
+        border-top: none;
+        border-top-left-radius: 0 !important;
+        border-top-right-radius: 0 !important;
+      }
+      .showing-users h4{
+        font-size: 0.8rem;
+        color: black;
+      }
+      /* .avatar_img img{
+        border-radius: 50px;
+        width: 10%;
+      } */
+      .tick{
+        background-color: green;
+        color: #fff;
+        border-radius: 50px;
+      }
+      .user-activation{
+        line-height: 1.7rem;
+      }
+      .deleteModal{
+        /* color: red; */
+        width: 100vw;
+        padding: 20px 20px;
+      }
+      .delete-body{
+        padding: 26px;
+      }
+      .error-danger{
+        /* background-color: #3aa8f7; */
+        color: red;
+        font-size: 36px;
+        border-radius: 50%;
+      }
+      .delete-body span p{
+        font-weight: 600;
+        font-size: 1.5rem;
+      }
+      .delete-footer .confirm {
+        background-color: #f44336 !important;
+        padding: 5px 15px;
+        color: #fff;
+        transition: all 0.4s ease-in;
+        border-radius: 5px;
+        margin-left: 0.3rem;
+    }
+    .delete-footer .delete-cancel{
+      background-color: #fff;
+      color: #000;
+      border: 0.2px solid gray;
+      padding: 4px 12px;
+      border-radius: 5px;
+      transition: all 0.4s ease-in;
+    }
+      .delete-footer button.confirm:hover {
+        background-color:lightcoral !important;
+        color: #000;
+        /* border: 1px solid #f44336; */
+    }
+    .delete-body span{
+      gap: 5px;
+    }
+    .delete-footer{
+     background-color: #f3f4f6 !important;
+    }
+    .modal-body {
+      position: relative;
+      flex: 1 1 auto;
+      padding: 20px !important;
+  }
