--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,27 @@
 /* YOu can Add Global Style to this file And also Import Other Style File  */
-:root{
-  --bs-font:'poppins';
-  --primarytextcolor:#000;
-  --secondarytextcolor:#fff;
-  --largeheadingfontsize:'48px';
-  --normalheadingfontsize:'24px';
-  --generalfontsize:'16px';
-  --bg-gradient:#f8f9fb;
-  --bg-gradientcard:#fff;
+:root {
+  --bs-font: 'poppins';
+  --primarytextcolor: #000;
+  --secondarytextcolor: #fff;
+  --largeheadingfontsize: '48px';
+  --normalheadingfontsize: '24px';
+  --generalfontsize: '16px';
+  --bg-gradient: #f8f9fb;
+  --bg-gradientcard: #fff;
 }
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: var(--bs-font )!important;
+  font-family: var(--bs-font) !important;
   /* background: var( --bg-gradient) ; */
 }
-.abc{
-  background: var( --bg-gradientcard) !important ;
+
+.next-button {
+  /* background: var( --bg-gradientcard) !important ; */
 }
+
 .form-error {
   color: red;
   font-family: Poppins, sans-serif;
@@ -122,15 +124,13 @@
 
 /* ====================Navber start Csss==================== */
 /* App.css */
-.LoginBtn{
+.LoginBtn {
   font-size: 14px;
   font-weight: 400;
-  padding: 6px 10px;  
+  padding: 6px 10px;
   display: flex;
   justify-content: center;
-  /* padding-left: 500px; */
-  /* text-transform: capitalize !important; */
-  color: #7642FF !important ;
+  color: #7642FF !important;
   background-color: white;
   border-radius: 20px;
   height: 35px;
@@ -138,22 +138,46 @@
   margin-left: 3;
   width: 100px;
   border: 1px solid #7642FF;
-
 }
 
-.LoginBtn:hover{
+.LoginBtn:hover {
   /* text-transform: capitalize !important; */
   color: #fff !important;
   background-color: #7642FF;
-  
+
+}
+.loginbtncontactform {
+  font-size: 14px;
+  font-weight: 400;
+  padding: 6px 10px;
+  justify-content: center;
+  color: #7642FF !important;
+  background-color: white;
+  width: 100%;
+  height: 35px;
+  margin-top: 3px;
+  margin-left: 3;
+  border: 1px solid #7642FF;
+    max-width: 500px;
+    height: 60px;
+    margin: 5px;
+    border-radius: 200px;
+    font-size: 1.125rem;
+    font-weight: 500;
+}
+.loginbtncontactform:hover {
+  /* text-transform: capitalize !important; */
+  color: #fff !important;
+  background-color: #7642FF;
+
 }
 
-
 /* ====================Navber End Csss==================== */
-.AskedQues{
+.AskedQues {
 
   background-color: #f44336;
 }
+
 @media screen and (max-width: 480px) {
   #AskedQues {
     margin-top: 1500px;
@@ -161,62 +185,9 @@
     flex-direction: column;
     align-items: center; */
   }
-  #StartFree{
-    font-size: 14px;
-  }
-}
-/* ====================Contact Us Start Csss==================== */
-.contact-form {
-  margin-top: 50px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-@media screen and (max-width: 480px) {
-  .contact-form {
-    margin-top: 50px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-}
 
-.h2 {
-  text-align: center;
-  font-size: 24px;
-  margin-bottom: 20px;
-}
 
-.form-group {
-  margin-bottom: 20px;
-  width: 300px;
 }
-
-.label {
-  display: block;
-  margin-bottom: 5px;
-  font-weight: bold;
-}
-
-.input,
-.textarea {
-  width: 100%;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  resize: vertical;
-}
-
-#Button{
-  padding: 10px 20px;
-  background-color: black;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  margin-bottom: 20px;
-}
-/* ====================Contact Us Csss==================== */
 /* ==============Defective Heading cSS===================== */
 .defectHead {
   /* background-color: #f44336; */
@@ -1064,3 +1035,64 @@ p {
   outline: 0;
   /* height: 109%; */
 }
+
+/* =============Contact page Css Start========= */
+.contactforminputfields{
+  width: 100%;
+  max-width: 500px;
+  height: 50px;
+  padding: 20px;
+  margin: 5px;
+  border: 1px solid grey;
+  border-radius: 200px;
+}
+.contactformheading{
+  font-size: 3rem;
+  color: rgb(62, 57, 107);
+  line-height: 2.5;
+  text-align: center;
+}
+.contactmainsection{
+margin-top: 50px;
+color: #69717c;
+}
+@media screen and (max-width: 480px) {
+  
+
+
+}
+/* =============Contact page Css End========= */
+/* =============MiddleSection page Css Start========= */
+.middlesectioncards{
+  min-width: 200px;
+  height: 300px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  margin-bottom: 40px;
+  background-color: #fff;
+}
+/* =============MiddleSection page Css End========= */
+/* =============accor page Css Start========= */
+.frequentheadindcss{
+  margin-top: 300px;
+  width: 100%;
+  text-align: center;
+
+}
+.accordianmainbox{
+  margin-top: 40px;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+ 
+}
+@media screen and (max-width: 480px) {
+  .frequentheadindcss{
+    margin-top: 1500px;
+    width: 100%;
+    text-align: center;
+  
+  }
+
+
+}
+/* =============accor page Css End========= */
