--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,11 @@
 .next-button {
   /* background: var( --bg-gradientcard) !important ; */
 }
+body{
+  
+    overflow-x: hidden;
 
+}
 .form-error {
   color: red;
   font-family: Poppins, sans-serif;
@@ -150,6 +154,25 @@
   background-color: #7642FF;
 
 }
+.loginbtntrackform {
+  font-size: 14px;
+  font-weight: 400;
+  padding: 6px 10px;
+  color: #7642FF !important;
+  background-color: white;
+  border: 1px solid #7642FF;
+  max-width: 300px;
+  height: 40px;
+  margin: 5px;
+  border-radius: 200px;
+  margin-top: 20px;
+}
+.loginbtntrackform:hover {
+  /* text-transform: capitalize !important; */
+  color: #fff !important;
+  background-color: #7642FF;
+
+}
 
 .loginbtncontactform {
   font-size: 14px;
@@ -158,8 +181,6 @@
   justify-content: center;
   color: #7642FF !important;
   background-color: white;
-  width: 100%;
-  height: 35px;
   margin-top: 3px;
   margin-left: 3;
   border: 1px solid #7642FF;
@@ -167,8 +188,6 @@
   height: 60px;
   margin: 5px;
   border-radius: 200px;
-  font-size: 1.125rem;
-  font-weight: 500;
 }
 
 .loginbtncontactform:hover {
@@ -1092,7 +1111,7 @@ p {
 /* =============MiddleSection page Css End========= */
 /* =============accor page Css Start========= */
 .frequentheadindcss {
-  margin-top: 300px;
+  margin-top: 50px;
   width: 100%;
   text-align: center;
 
@@ -1108,7 +1127,7 @@ p {
 
 @media screen and (max-width: 480px) {
   .frequentheadindcss {
-    margin-top: 1500px;
+    /* margin-top: 1500px; */
     width: 100%;
     text-align: center;
 
@@ -1139,15 +1158,14 @@ p {
 /* =============accor page Css End========= */
 /* TrackPage.css */
 
-/* TrackPage.css */
-
 .track-container {
   background-color: #fafafa;
   width: 100%;
-  border-radius: 20px;
-  margin: 20px;
+  max-width: 568px;
+  margin: 0 auto;
   padding: 20px;
-  border: 1px dashed grey;
+  border-radius: 20px;
+  border: 1px dashed #ebebeb;
 }
 
 .track-heading {
@@ -1176,11 +1194,11 @@ p {
   height: 50px;
   padding: 10px;
   margin-top: 10px;
-  border: 1px solid grey;
   border-radius: 10px;
+  
 }
 
-.track-button {
+/* .track-button {
   background-color: #6b7280;
   border-radius: 10px;
   color: #fff;
@@ -1189,31 +1207,18 @@ p {
   font-size: 18px;
   font-weight: 500;
   margin-top: 20px;
-}
+} */
 
-@media screen and (min-width: 480px) {
-  /* Styles for screens with a width of 480px or larger (including mobile screens) */
+@media screen and (min-width: 768px) {
+  /* Styles for desktop screens */
   .track-container {
-    width: 400px;
-    margin: 20px auto;
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 40px;
   }
 }
+/* .navbertracktab{
+  padding-right: 30px;
+} */
 
-@media screen and (max-width: 480px) {
-  .track-button {
-    background-color: #6b7280;
-    border-radius: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 5px;
-    margin-top: 12px;
-    color: #fff;
-    border: 1px solid blue;
-    padding: 8px 16px;
-    font-size: 18px;
-    font-weight: 500;
-  }
-  
-
-}
